WIP6 - more test fixes